en/assets/css/main.css
/* ... */
		@media screen and (max-width: 736px) {

			#wrapper section {
				margin: 3rem 0 0 0;
			}

			#wrapper > section {
				margin: 0;
			}

				#wrapper > section > header {
					padding: 3rem 2rem;
				}

				#wrapper > section > .content {
					padding: 3rem 2rem;
				}

					#wrapper > section > .content > section {
						margin: 3rem 0;
					}

				#wrapper > section > footer {
					padding: 0 2rem 3rem 2rem;
				}

				#wrapper > section.intro > header {
					padding: 5.5rem 2rem 2.5rem 2rem;
				}

			#wrapper .copyright {
				padding: 0 2rem 2rem 2rem;
			}

		}

		@media screen and (max-width: 360px) {

			#wrapper section {
				margin: 2.25rem 0 0 0;
			}

			#wrapper > section {
				margin: 0;
			}

				#wrapper > section > header {
					padding: 2.25rem 1.5rem;
				}

				#wrapper > section > .content {
					padding: 2.25rem 1.5rem;
				}

					#wrapper > section > .content > section {
						margin: 2.25rem 0;
					}

				#wrapper > section > footer {
					padding: 0 1.5rem 2.25rem 1.5rem;
				}

				#wrapper > section.intro > header {
					padding: 4.875rem 1.5rem 1.875rem 1.5rem;
				}

			#wrapper .copyright {
				padding: 0 1.5rem 1.5rem 1.5rem;
			}

		}

	body.is-mobile #wrapper:before {
		background-attachment: scroll;
		background-position: 50% -3%;
		background-repeat: repeat-y;
		background-size: 150% auto;
	}

	body.is-mobile #wrapper > section > header {
		background-attachment: scroll;
		background-position: 25% 50%;
	}

	body.is-mobile #wrapper > section.intro > header {
		background-position: 25% 23%;
	}

	#wrapper:before {
		transition: opacity 1s ease;
	}

		body.is-preload #wrapper:before {
			opacity: 0;
		}

	#wrapper > section.intro {
		transition: opacity 1s ease;
		opacity: 1;
	}

		#wrapper > section.intro > header {
			transition: transform 1s ease;
		}

		#wrapper > section.intro > .content {
			transition: transform 1s ease;
		}

		body.is-preload #wrapper > section.intro {
			opacity: 0;
		}

			body.is-preload #wrapper > section.intro > header {
				transform: translateY(1rem);
			}

			body.is-preload #wrapper > section.intro > .content {
				transform: translateY(-1rem);
			}

		@media screen and (max-width: 1280px) {

			#wrapper > section.intro > header > * {
				transition: transform 1s ease, opacity 1s ease;
			}

			body.is-preload #wrapper > section.intro > header {
				transform: none;
			}

				body.is-preload #wrapper > section.intro > header > * {
					transform: translate(-0.5rem);
					opacity: 0;
				}

			body.is-preload #wrapper > section.intro > .content {
				transform: none;
			}

		}

	body.is-ie #wrapper section {
		display: flex;
		flex-wrap: wrap;
	}

		body.is-ie #wrapper section > header {
			width: 50%;
		}

		body.is-ie #wrapper section > .content {
			width: 50%;
		}

		body.is-ie #wrapper section > footer {
			width: 50%;
			text-align: left;
			margin-left: 50%;
			padding: 5rem;
		}

	body.is-ie #wrapper > section > .content > section {
		width: 100vw;
	}

	@media screen and (max-width: 1280px) {

		body.is-ie #wrapper section > footer {
			padding: 4rem;
		}

	}
	
.intro * {
	color: #fff;
}
header * {
	color: #fff;
}

.ilb {
	display: inline-block;
	margin-right: 5px;
}

